[package]
name = "arc-swap"
version = "1.4.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
description = "Atomically swappable Arc"
documentation = "https://docs.rs/arc-swap"
repository = "https://github.com/vorner/arc-swap"
readme = "README.md"
keywords = ["atomic", "Arc"]
categories = ["data-structures", "memory-management"]
license = "Apache-2.0/MIT"
edition = "2018"

[badges]
travis-ci = { repository = "vorner/arc-swap" }
appveyor = { repository = "vorner/arc-swap" }
maintenance = { status = "actively-developed" }

[features]
# ArcSwapWeak (for std::sycn::Weak) support
weak = []
# Some strategies used for testing few internal cornercases. *DO NOT USE* (no stability guarantees and their performance is likely very bad).
internal-test-strategies = []
# Possibly some strategies we are experimenting with. Currently empty. No stability guarantees are included about them.
experimental-strategies = []

[dependencies]
serde = { version = "1.0.130", features = ["rc"], optional = true }

[dev-dependencies]
adaptive-barrier = "~0.1"
criterion = "~0.3"
crossbeam-utils = "~0.8"
itertools = "~0.9"
num_cpus = "~1"
once_cell = "~1"
parking_lot = "~0.11"
proptest = "~0.10"
serde_derive = "1.0.130"
serde_json = "1.0.69"

[profile.bench]
debug = true

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "background"
harness = false

[[bench]]
name = "int-access"
harness = false

[[bench]]
name = "track"
harness = false
