[package]
name = "benchmarks"
version = "0.1.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
edition = "2018"
publish = false

[dependencies]

[dev-dependencies]
arc-swap = { path = ".." }
crossbeam = "~0.5" # Outdated on purpose, benchmarking something that no longer exists
crossbeam-utils = "~0.6"
once_cell = "~1"
parking_lot = "~0.9"

[[bench]]
name = "atomics"
path = "benches/atomics.rs"

[[bench]]
name = "background"
path = "benches/background.rs"

[[bench]]
name = "int-access"
path = "benches/int-access.rs"
harness = false
